--- a/Carousel/style.css
+++ b/Carousel/style.css
@@ -22,3 +22,44 @@ body {
 	color: #343a40;
 	line-height: 1;
 }
+
+.carousel {
+	background-color: #087f5b;
+	width: 800px;
+	margin: 100px auto;
+	border-radius: 8px;
+	padding: 32px;
+	padding-left: 86px;
+
+	display: flex;
+	align-items: center;
+	gap: 86px;
+}
+
+img {
+	height: 200px;
+	border-radius: 8px;
+	transform: scale(1.6);
+	box-shadow: 0 12px 24px rgba(0, 0, 0, 0.25);
+}
+
+.testimonial {
+}
+.testimonial-text {
+	font-size: 18px;
+	font-weight: 500;
+	line-height: 1.5;
+	margin-bottom: 32px;
+	color: #e6fcf5;
+}
+.testimonial-author {
+	font-size: 14px;
+	margin-bottom: 4px;
+	color: #c3fae8;
+}
+.testimonial-job {
+	font-size: 12px;
+	color: #c3fae8;
+}
+.btn {
+}
