--- a/Carousel/style.css
+++ b/Carousel/style.css
@@ -28,8 +28,8 @@ body {
 	width: 800px;
 	margin: 100px auto;
 	border-radius: 8px;
-	padding: 32px;
-	padding-left: 86px;
+	padding: 32px 48px 32px 86px;
+	position: relative;
 
 	display: flex;
 	align-items: center;
@@ -39,12 +39,10 @@ body {
 img {
 	height: 200px;
 	border-radius: 8px;
-	transform: scale(1.6);
+	transform: scale(1.5);
 	box-shadow: 0 12px 24px rgba(0, 0, 0, 0.25);
 }
 
-.testimonial {
-}
 .testimonial-text {
 	font-size: 18px;
 	font-weight: 500;
@@ -61,5 +59,65 @@ img {
 	font-size: 12px;
 	color: #c3fae8;
 }
+/* CONTROLS */
 .btn {
+	background-color: #fff;
+	border: none;
+	height: 40px;
+	width: 40px;
+	border-radius: 50%;
+	position: absolute;
+	box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+	cursor: pointer;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.btn--left {
+	/* In relation to PARENT ELEMENT */
+	left: 0;
+	top: 50%;
+
+	/* In relation to ELEMENT ITSELF */
+	transform: translate(-50%, -50%);
+}
+.btn--right {
+	/* In relation to PARENT ELEMENT */
+	right: 0;
+	top: 50%;
+
+	/* In relation to ELEMENT ITSELF */
+	transform: translate(50%, -50%);
+}
+
+.btn-icon {
+	height: 24px;
+	width: 24px;
+	stroke: #087f5b;
+}
+
+.dots {
+	position: absolute;
+	bottom: 0;
+	left: 50%;
+	transform: translate(-50%, 32px);
+
+	display: flex;
+	gap: 8px;
+}
+
+.dot {
+	height: 12px;
+	width: 12px;
+	background-color: #fff;
+	border: 2px solid #087f5b;
+	border-radius: 50%;
+	cursor: pointer;
+	position: relative;
+}
+
+.dot--fill {
+	background-color: #087f5b;
 }
