--- a/Pagination/style.css
+++ b/Pagination/style.css
@@ -24,3 +24,74 @@ body {
 	display: flex;
 	justify-content: center;
 }
+
+.pagination {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 12px;
+	margin-top: 200px;
+}
+.btn {
+	border: solid 1.5px #087f5b;
+	background-color: #fff;
+	padding: 8px;
+	border-radius: 50%;
+	cursor: pointer;
+
+	display: flex;
+	align-items: center;
+}
+
+.btn:hover {
+	background-color: #087f5b;
+}
+
+.btn:hover .btn-icon {
+	stroke: #fff;
+}
+
+.btn-icon {
+	width: 24px;
+	height: 24px;
+	font-weight: bold;
+	stroke: #087f5b;
+}
+.page:link,
+.page:visited {
+	font-size: 18px;
+	width: 36px;
+	height: 36px;
+	line-height: 36px;
+	color: #000;
+	text-decoration: none;
+	text-align: center;
+}
+
+.page:hover,
+.page:active {
+	color: #fff;
+	background-color: #087f5b;
+	border-radius: 50%;
+}
+
+.active:link,
+.active:visited {
+	font-size: 18px;
+	width: 36px;
+	height: 36px;
+	line-height: 36px;
+	color: #fff;
+	background-color: #087f5b;
+	border-radius: 50%;
+	text-align: center;
+
+	display: inline-block;
+}
+
+.page--dots {
+	font-size: 18px;
+	color: #000;
+	text-decoration: none;
+	cursor: default;
+}
