--- a/Hero section/style.css
+++ b/Hero section/style.css
@@ -6,19 +6,63 @@ FONT SIZE SYSTEM (px)
 10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
 */
 
-/* 
-MAIN COLOR - #087f5b
-GREY COLOR - #343a40
-*/
-
 * {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
 }
 
-body {
-	font-family: 'Inter', sans-serif;
-	color: #343a40;
-	line-height: 1;
+html {
+	font-family: 'Rubik', sans-serif;
+	color: #444;
+}
+header {
+	height: 100vh;
+
+	background-color: orangered;
+}
+.container {
+	margin: 0 auto;
+	width: 1200px;
+}
+
+nav {
+	font-size: 20px;
+	font-weight: 700;
+	display: flex;
+	justify-content: space-between;
+	background-color: green;
+}
+
+h1 {
+	font-size: 52px;
+	margin-bottom: 32px;
+}
+p {
+	font-size: 20px;
+	line-height: 1.6;
+	margin-bottom: 48px;
+}
+
+.btn:link,
+.btn:visited {
+	font-size: 20px;
+	font-weight: 600;
+	background-color: #e67e22;
+	color: #fff;
+	text-decoration: none;
+	padding: 16px 32px;
+	border-radius: 9px;
+
+	display: inline-block;
+}
+
+h2 {
+	font-size: 44px;
+	margin-bottom: 48px;
+}
+
+section {
+	padding: 96px 0;
+	background-color: #f7f7f7;
 }
