--- a/Basic app layout/style.css
+++ b/Basic app layout/style.css
@@ -32,7 +32,6 @@ body {
 }
 
 nav,
-menu,
 section,
 main,
 aside {
@@ -46,13 +45,48 @@ nav {
 }
 
 menu {
+	display: flex;
 	background-color: #7048e8;
-	color: #fff;
 	grid-column: 2 /-1;
+	align-items: center;
+	gap: 12px;
+	padding: 0 40px;
+}
+
+button {
+	display: inline-block;
+	font-size: 16px;
+	font-weight: bold;
+	background-color: #5f3dc4;
+	border: none;
+	cursor: pointer;
+	color: #fff;
+	padding: 8px 12px;
+}
+
+button:last-child {
+	background-color: #d6336c;
+	margin-left: auto;
 }
 
 section {
 	background-color: #e9ecef;
+	padding: 40px;
+	overflow: scroll;
+
+	display: flex;
+	flex-direction: column;
+	gap: 40px;
+}
+
+.email {
+	background-color: #adb5bd;
+	height: 96px;
+
+	display: flex;
+	flex-shrink: 0;
+	align-items: center;
+	justify-content: center;
 }
 
 aside {
